--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
 </head>
 
 <body id="page-top" class="index">
-
+    <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=565403940157439&version=v2.0";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -49,13 +56,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">תיק עבודות</a>
+                        <a href="#contact">צור/י קשר</a>
                     </li>
+                    <li class="page-scroll">
+                        <a href="#portfolio">תיק עבודות</a>
+                    </li>                    
                     <li class="page-scroll">
                         <a href="#about">אודות</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#contact">צור/י קשר</a>
                     </li>
                 </ul>
             </div>
@@ -73,17 +80,49 @@
                         <span class="name">נמרוד שמחוביץ פסנתרים</span>
                         <hr class="star-light">
                         <span class="skills">מומחה לכיוון, תיקון, שיפוץ וחידוש פסנתרים</span>
+                        <span class="name">054-799-0406</span>
                     </div>
                 </div>
             </div>
         </div>
     </header>
 
-    <section id="portfolio">
+    <section class="success" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>אודות</h2>
+                    <hr class="star-light">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <p dir='rtl'>
+                        בית המלאכה לכיוון, תיקון, שיפוץ וחידוש פסנתרים הוקם ומנוהל על ידי נמרוד שמחוביץ'
+                    </p>
+                    <p dir='rtl'>
+                        נמרוד, מומחה לכל סוגי הפסנתרים, הקים את בית המלאכה בשנת 2004 במטרה לתת את השירות הטוב והמקצועי ביותר לבעלי פסנתרים ולעומדים לקנות/למכור פסנתר.
+                    </p>
+                    <p dir='rtl'>
+                        מיקמנו את בית המלאכה במושב חגור בשרון, בצמוד לכביש שש, כדי לאפשר הגעה נוחה לכל חלקי הארץ ושירות מהיר ונגיש.
+                    </p>
+                    <p dir='rtl'>
+                        נשמח לעמוד לרשותכם לכל שאלה או בעיה המתעוררת בנוגע לפסנתר שלכם ולייעץ לפני רכישת/מכירת פסנתר (יעוץ טלפוני חינם).
+                    </p>
+                    <br>
+                    <h3 dir='rtl'>
+                        יעוץ טלפוני חינם 054-799-0406
+                    </h3>
+                </div> 
+            </div>
+        </div>
+    </section>
+
+     <section id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>תיק עבודות</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -152,35 +191,12 @@
         </div>
     </section>
 
-    <section class="success" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <hr class="star-light">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contact Me</h2>
+                    <h2>צור/י קשר</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -222,28 +238,23 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                        <p>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</p>
+                        <h3>כתובתנו</h3>
+                        <p>רחוב הכלנית 80
+                            <br>מושב חגור</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
-                            <li><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
-                            </li>
-                            <li><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                            <li><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
-                            </li>
+                            <li><a href="https://www.facebook.com/Nimrod.pianos1231231" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                            </li>                            
                         </ul>
+                        <div class="fb-like" data-href="https://www.facebook.com/Nimrod.pianos1231231" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelance</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3>אודות נמרוד</h3>
+                        <p dir='rtl'>
+                            מומחה בעל תודעת שירות גבוהה לכל סוגי הפסנתרים, מתחייב לשירות הטוב והמקצועי ביותר לבעלי פסנתרים ולעומדים לקנות/למכור פסנתר.
+</p>
                     </div>
                 </div>
             </div>
@@ -252,7 +263,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; 2014 - Your Name
+                        Copyright &copy; 2014 - Nimrod Simhovich Pianos
                     </div>
                 </div>
             </div>
