--- a/index.html
+++ b/index.html
@@ -245,10 +245,10 @@
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
-                            <li><a href="https://www.facebook.com/Nimrod.pianos1231231" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                            <li><a href="//www.facebook.com/Nimrod.pianos1231231" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>                            
                         </ul>
-                        <div class="fb-like" data-href="https://www.facebook.com/Nimrod.pianos1231231" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+                        <div class="fb-like" data-href="//www.facebook.com/Nimrod.pianos1231231" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>אודות נמרוד</h3>
