--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                     <p dir='rtl'>
                         מיקמנו את בית המלאכה במושב חגור בשרון, בצמוד לכביש שש, כדי לאפשר הגעה נוחה לכל חלקי הארץ ושירות מהיר ונגיש.
                     </p>
+                    בדיקה 123
                     <p dir='rtl'>
                         נשמח לעמוד לרשותכם לכל שאלה או בעיה המתעוררת בנוגע לפסנתר שלכם ולייעץ לפני רכישת/מכירת פסנתר (יעוץ טלפוני חינם).
                     </p>
