--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
                         בית המלאכה לכיוון, תיקון, שיפוץ וחידוש פסנתרים הוקם ומנוהל על ידי נמרוד שמחוביץ'
                     </p>
                     <p dir='rtl'>
-                        נמרוד, מומחה לכל סוגי הפסנתרים, הקים את בית המלאכה בשנת 2004 במטרה לתת את השירות הטוב והמקצועי ביותר לבעלי פסנתרים ולעומדים לקנות/למכור פסנתר.
+                        נמרוד, מומחה לכל סוגי הפסנתרים (רכש את המקצוע בעבודה מעשית עם אחד ממכווני הפסנתרים המובילים והוותיקים בארץ), הקים את בית המלאכה בשנת 2004 במטרה לתת את השירות הטוב והמקצועי ביותר לבעלי פסנתרים ולעומדים לקנות/למכור פסנתר.
                     </p>
                     <p dir='rtl'>
-                        מיקמנו את בית המלאכה במושב חגור בשרון, בצמוד לכביש שש, כדי לאפשר הגעה נוחה לכל חלקי הארץ ושירות מהיר ונגיש.
+                        בית המלאכה ממוקם במושב חגור בשרון, בצמוד לכביש שש, ומאפשר הגעה נוחה לכל חלקי הארץ.
                     </p>
 
                     <p dir='rtl'>
