facebook section name

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                             <br>מושב חגור</p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
+                        <h3>בקרו אותנו בפייסבוק</h3>
                         <ul class="list-inline">
                             <li><a href="//www.facebook.com/Nimrod.pianos1231231" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
