--- a/index.html
+++ b/index.html
@@ -252,10 +252,8 @@
                         <div class="fb-like" data-href="//www.facebook.com/Nimrod.pianos1231231" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>אודות נמרוד</h3>
-                        <p dir='rtl'>
-                            מומחה בעל תודעת שירות גבוהה לכל סוגי הפסנתרים, מתחייב לשירות הטוב והמקצועי ביותר לבעלי פסנתרים ולעומדים לקנות/למכור פסנתר.
-</p>
+                        <h3>ליעוץ טלפוני חינם - 054-799-0406</h3>
+
                     </div>
                 </div>
             </div>
