--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                         <div class="fb-like" data-href="//www.facebook.com/Nimrod.pianos1231231" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>ליעוץ טלפוני חינם - 054-799-0406</h3>
+                        <h3>ליעוץ טלפוני חינם<br>054-799-0406</h3>
 
                     </div>
                 </div>
